<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@android:color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/perintah_emailperusahan"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_extra_large"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/instruksi_email"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_very_large" />

    <com.google.android.material.textfield.TextInputLayout
        android:background="@drawable/rounded_button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sample_email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:background="@drawable/rounded_button_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/namaPerusahaan"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintnamaPerusahaan"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lanjut"
        android:textSize="@dimen/text_size_very_large"
        android:backgroundTint="#3A3D9C"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>
</LinearLayout>