<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutRootFullScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cc000000">

    <ImageView
        android:id="@+id/imageViewFullScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/full_screen_download"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true" />

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:src="@android:drawable/ic_menu_close_clear_cancel" />

    <ImageButton
        android:id="@+id/btnDownload"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/download"
        android:src="@drawable/ic_download" />
</RelativeLayout>